--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -14,6 +14,7 @@
             })(window,document,'script','dataLayer','GTM-WZJJ3ZT');</script>
         <!-- End Google Tag Manager -->
 
+        {% block datalayer %}{% endblock %}
 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -66,7 +67,7 @@
                           height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
-        {#<div align="center" class="alert alert-success">Při nákupu za více než 2000 Kč máte dopravu zdarma!</div>#}
+        <div align="center" class="alert alert-success">Doprava do Zásilkovny ZDARMA!</div>
         {#<div align="center" class="alert alert-danger">Objednávky přijaté po 9. prosinci 2018 budeme odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>#}
         <header>
             <div class="container">
