--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -17,13 +17,21 @@
 
         {% block datalayer %}{% endblock %}
 
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Facebook Pixel Code -->
         <script>
-            (adsbygoogle = window.adsbygoogle || []).push({
-                google_ad_client: "ca-pub-6212516304179476",
-                enable_page_level_ads: true
-            });
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+                n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+                if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+                n.queue=[];t=b.createElement(e);t.async=!0;
+                t.src=v;s=b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t,s)}(window, document,'script',
+                'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '326154811607780');
+            fbq('track', 'PageView');
         </script>
+
+        <!-- End Facebook Pixel Code -->
 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -79,6 +87,8 @@
                           height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
         {% endif %}
+
+        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=326154811607780&ev=PageView&noscript=1"/></noscript>
 
         <div align="center" class="alert alert-success">Doprava do Zásilkovny ZDARMA!</div>
         {#<div align="center" class="alert alert-danger">Objednávky přijaté po 9. prosinci 2018 budeme odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>#}
