--- a/src/AppBundle/Resources/views/ShopCatalog/list.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/list.html.twig
@@ -52,3 +52,11 @@
         });
     </script>
 {% endblock %}
+
+{% block fb_pixel_track %}
+        fbq('track', 'ViewContent', {
+            value: {{ dataLayer.ecomm_totalvalue }},
+            currency: 'CZK',
+            content_ids: [{{ dataLayer.ecomm_prodid | join(",") | raw }}],
+        });
+{% endblock %}
