--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -28,7 +28,7 @@
                 s.parentNode.insertBefore(t,s)}(window, document,'script',
                 'https://connect.facebook.net/en_US/fbevents.js');
             fbq('init', '326154811607780');
-            fbq('track', 'PageView');
+            {% block fb_pixel_track %}fbq('track', 'PageView');{% endblock %}
         </script>
 
         <!-- End Facebook Pixel Code -->
