facebook pixel sledovani kategorie a produktu

--- a/src/AppBundle/Resources/views/ShopCatalog/detail.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/detail.html.twig
@@ -186,5 +186,6 @@
         value: {{ product.price }},
         currency: 'CZK',
         content_ids: ['{{ product.id }}'],
+        content_type: 'product'
     });
 {% endblock %}
