--- a/src/AppBundle/Resources/views/ShopCatalog/list.html.twig
+++ b/src/AppBundle/Resources/views/ShopCatalog/list.html.twig
@@ -58,5 +58,6 @@
             value: {{ dataLayer.ecomm_totalvalue }},
             currency: 'CZK',
             content_ids: [{{ dataLayer.ecomm_prodid | join(",") | raw }}],
+            content_type: 'product'
         });
 {% endblock %}
