--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -93,7 +93,7 @@
 
         <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=326154811607780&ev=PageView&noscript=1"/></noscript>
 
-        <div align="center" class="alert alert-success">Doprava do Zásilkovny ZDARMA!</div>
+        {#<div align="center" class="alert alert-success">Doprava do Zásilkovny ZDARMA!</div>#}
         {#<div align="center" class="alert alert-danger">Objednávky přijaté po 9. prosinci 2018 budeme odesílat až začátkem roku 2019. Děkujeme za pochopení.</div>#}
         <header>
             <div class="container">
